Add production Docker infrastructure
Docker:
- Backend Dockerfile: multi-stage build with layered jars
- Frontend Dockerfile: Node build + nginx serve
- docker-compose.prod.yml: postgres, backend, frontend, nginx, certbot

Nginx:
- Reverse proxy configuration
- WebSocket support with upgrade headers
- Gzip compression, security headers
- SSL/HTTPS ready (commented blocks)

Configuration:
- application-prod.yml: production Spring profile
- SecurityConfig/WebSocketConfig: configurable CORS origins
- .env.example: environment variables template

Documentation:
- DEPLOY.md: complete deployment instructions

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>